--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mongodb": "^3.0.7"
+    "mongodb": "^3.0.7",
+    "node-cron": "^1.2.1",
+    "request": "^2.85.0"
   }
 }
